fix  potential overfflow issue with fixed scrollbar #632

--- a/static/css/place/place.scss
+++ b/static/css/place/place.scss
@@ -254,6 +254,7 @@ $chart-border: 0.5px solid #dee2e6;
 #sidebar-region {
   padding-top: 15px;
   position: relative;
+  transition: transform 300ms linear;
 }
 
 #sidebar-region.fixed {
